--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -46,8 +46,8 @@
     align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
-    border-bottom: 2px #efefef solid;
-    padding: 2em 0 2em 0;
+    // border-bottom: 2px #efefef solid;
+    padding: 0.5em 0 0.5em 0;
     
 
     .paper-box-image{
@@ -88,7 +88,7 @@
 }
 
 $scroll_offset : 2em;
-h1:before, .anchor:before { 
+h1:before, .anchor: before { 
     content: ''; 
     display: block; 
     position: relative; 
@@ -106,4 +106,6 @@ h1:before, .anchor:before {
     color: white;
     background-color: #00369f;
     font-size: .8em;
+    min-width: 150px;
+    text-align: center;
 }
