--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -104,7 +104,7 @@ h1:before, .anchor:before {
     margin-top: .5em;
     margin-left: -.5em;
     color: white;
-    background-color: #00369f;
+    background-color: #0A6DAF;
     font-size: .8em;
     min-width: 150px;
     text-align: center;
