--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -2,3 +2,4 @@
 
 {% include analytics.html %}
 {% include fetch_google_scholar_stats.html %}
+<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=k55Mb0vVet7bIyJWP38FN60iBwZQfv_tJBPtmUUaAps"></script>
